# odoo-rich-cli

./: .gitignore  README.md  pyproject.toml  release-notes.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/odoo_rich_cli/: __init__.py  app.py  commands.py  config.py  menu.py  scaffold.py  shell.py  ui.py
tests/: test_app.py  test_config.py  test_db_commands.py  test_scaffold.py  test_shell.py
