[project]
name = "odoo-rich-cli"
dynamic = ["version"]
description = "A Rich-powered CLI for everyday Odoo development tasks."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Mohammed Farhan KC", email = "kcfarhan123@gmail.com" },
]
keywords = [
    "odoo",
    "odoo-bin",
    "odoo-shell",
    "odoo-cli",
    "odoo-tools",
    "odoo-developer",
    "erp",
    "cli",
    "tui",
    "rich",
    "typer",
    "scaffold",
    "module-management",
    "database-management",
    "backup",
    "restore",
    "postgresql",
    "automation",
    "developer-tools",
    "developer-experience",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich >= 13.0.0",
    "typer >= 0.9.0",
]

[project.urls]
Homepage = "https://github.com/mdfarhankc/odoo-rich-cli"
Documentation = "https://github.com/mdfarhankc/odoo-rich-cli#readme"
Repository = "https://github.com/mdfarhankc/odoo-rich-cli"
Issues = "https://github.com/mdfarhankc/odoo-rich-cli/issues"
Changelog = "https://github.com/mdfarhankc/odoo-rich-cli/blob/main/release-notes.md"

[project.scripts]
orc = "odoo_rich_cli.app:app"
odoo-rich-cli = "odoo_rich_cli.app:app"

[dependency-groups]
dev = [
    "ruff >= 0.6.0",
    "mypy >= 1.4.0",
    "pytest >= 8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/odoo_rich_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_rich_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/odoo_rich_cli",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "pyproject.toml",
]

[tool.pytest]
addopts = ["--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src/odoo_rich_cli"]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["typer.*", "rich.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"src/odoo_rich_cli/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["odoo_rich_cli"]

